--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Banana Speak</title>
+    <link rel="stylesheet" href="styles.css">
+
     <style>
         textarea {
             width: 80%;
@@ -27,16 +29,26 @@
 </head>
 
 <body>
-    <h1>talk bananaaa</h1>
+
+    <section class="section">
+        <h1>Banana talk</h1>
+    </section>
 
     <textarea id="txt-input"
         placeholder="put your sentence in English here and we will convert it to banana"></textarea>
-    <button id="btn-translate">Translate</button>
+    <button id="btn-translate">Translate to Banana</button>
 
 
     <div style="font-size: larger;"> Output will come here </div>
     <div id="output"></div>
     <script src="app.js" type="text/javascript"></script>
+
+    <section class="section">
+        <h1>About</h1>
+        <p>Are you a fan of minions? Did you know that the gibberish they say is an actual language.Use the translator
+            to convert your text from English to Minion speak or Banana language</p>
+    </section>
+
 
 </body>
 
