--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Banana Speak</title>
+    <title>Banana Talk</title>
     <link rel="stylesheet" href="styles.css">
 
     <style>
         textarea {
-            width: 80%;
-            height: 10vh;
+            width: 50%;
+            height: 8vh;
             display: block;
             margin: 1rem;
             padding: 1rem;
@@ -19,8 +19,8 @@
 
         #output {
             border: 1px solid black;
-            height: 10vh;
-            width: 80%;
+            height: 6vh;
+            width: 50%;
             margin: 1rem;
             padding: 1rem;
         }
@@ -31,7 +31,9 @@
 <body>
 
     <section class="section">
-        <h1>Banana talk</h1>
+        <h1>talk like minions</h1>
+
+        <h2>bello ma friend!!!</h2>
     </section>
 
     <textarea id="txt-input"
@@ -39,7 +41,7 @@
     <button id="btn-translate">Translate to Banana</button>
 
 
-    <div style="font-size: larger;"> Output will come here </div>
+    <div style="font-size: larger;"> Translated will come here </div>
     <div id="output"></div>
     <script src="app.js" type="text/javascript"></script>
 
