--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 
     <section class="section">
         <h1>About</h1>
-        <p>Are you a fan of minions? Did you know that the gibberish they say is an actual language.Use the translator
-            to convert your text from English to Minion speak or Banana language</p>
+        <p>Are you a fan of minions? Did you know that the gibberish they say is an actual language. <br>
+            Use the translator to convert your text from English to Minion speak or Banana language</p>
     </section>
 
 
